kyverno/policies/01-disallow-root-user.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: disallow-root-user
  annotations:
    policies.kyverno.io/title: "Interdiction de l'utilisateur root"
    policies.kyverno.io/category: "Pod Security Standards (Restricted)"
    policies.kyverno.io/severity: "high"
    policies.kyverno.io/description: >-
      Les conteneurs s'exécutant en root augmentent considérablement la surface d'attaque.
      Cette politique impose runAsNonRoot: true et interdit runAsUser: 0.
spec:
  validationFailureAction: Enforce
  background: true
  rules:
    - name: require-run-as-non-root
      match:
        any:
        - resources:
            kinds:
              - Pod
      exclude:
        any:
        - resources:
            namespaces:
              - kube-system
              - kyverno
              - monitoring
      validate:
        message: "L'exécution sous le compte root (UID 0) est formellement interdite. Vous devez définir 'securityContext.runAsNonRoot: true'."
        pattern:
          spec:
            =(securityContext):
              =(runAsNonRoot): true
            containers:
              - =(securityContext):
                  =(runAsNonRoot): true
                  =(runAsUser): ">0"
